<resources>
    <string name="app_name">Beender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">New Places</string>
    <string name="title_notifications">Notifications</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="appTitle">Beender</string>
    <string name="appSubtitle">Plan your next trip</string>
    <string name="txt_register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="fullname">Full Name</string>
    <string name="toast_register">Registration complete</string>
    <string name="title_map">Map</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>


    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_delete_me">DeleteMe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="test_string">test</string>
    <string name="ranking_icon">⭐</string>
    <string name="markerOk">Remove</string>
    <string name="markerCancel">Cancel</string>
    <string name="markerDialogMessage">Are you sure you want to remove this destination?</string>
    <string name="alertOk">Ok</string>
    <string name="alertCancel">Cancel</string>

</resources>